bin_PROGRAMS = mygale
mygale_SOURCES = configuration.cpp file.cpp hashtable.cpp log.cpp mutex.cpp mystring.cpp objectaction.cpp parser.cpp semaphore.cpp thread.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
mygale_LDFLAGS = $(all_libraries) 
noinst_HEADERS = memory.h list.h configuration.h file.h hashtable.h log.h mutex.h mystring.h objectaction.h parser.h semaphore.h thread.h